[package]
authors = ["Greizgh <greizgh@ephax.org>"]
name = "gru"
version = "0.1.0"
[dependencies]
base64 = "^0.7.0"
clap = "^2.27.1"
dotenv = "^0.10.1"
rand = "^0.3.17"
rocket = "^0.3.3"
rocket_codegen = "^0.3.3"

[dependencies.diesel]
features = ["sqlite"]
version = "^0.16.0"

[dependencies.diesel_codegen]
features = ["sqlite"]
version = "^0.16.0"
