[package]
authors = ["Greizgh <greizgh@ephax.org>"]
name = "gru"
version = "0.1.0"
license = "MIT"
[package.metadata.deb]
license-file = ["COPYING"]
depends = "$auto, systemd"
section = "admin"
priority = "optional"
assets = [
    ["target/release/gru", "usr/local/bin/", "755"],
    ["resources/gru.service", "usr/lib/systemd/system/", "644"],
]
[dependencies]
base64 = "^0.7.0"
clap = "^2.27.1"
dotenv = "^0.10.1"
r2d2 = "^0.7.4"
r2d2-diesel = "^0.16.0"
rand = "^0.3.17"
rocket = "^0.3.3"
rocket_codegen = "^0.3.3"
rocket_contrib = "^0.3.3"
serde = "^1.0.19"
serde_derive = "^1.0.19"

[dependencies.diesel]
features = ["sqlite"]
version = "^0.16.0"

[dependencies.diesel_codegen]
features = ["sqlite"]
version = "^0.16.0"
